//
//  AccessibilityIds.swift
//  ImageFeed
//
//  Created by PandaPo on 14.04.25.
//

import Foundation
enum AccessibilityIds {
    static let loginButton = "Authenticate"
    static let webWiew = "UnsplashWebView"
    static let likeButton = "LikeButton"
    static let backButton = "BackButton"
    static let logoutButton = "LogoutButton"
    static let authViewController = "AuthViewController"
}
