...
    
    func showDefaultAvatar() {
        imageView.image = UIImage(named: "placeholderAvatar")
    }
    
    func showLogoutAlert() {
        let alert = UIAlertController(title: "Пока, пока!",
                                      message: "Уверены, что хотите выйти?",
                                      preferredStyle: .alert)
        
        let yesAction = UIAlertAction(title: "Да", style: .default) { [weak self] _ in
            self?.presenter?.didTapLogoutButton()
        }
        yesAction.accessibilityIdentifier = "Да"
        alert.addAction(yesAction)
        
        let noAction = UIAlertAction(title: "Нет", style: .cancel)
...
